tests/NormalTests/paczka1/fuzzy1/38281319.err
Error in line 8: SdW1jwYu S449 77,3
Error in line 9: b37lo02Z S108 76,7
Error in line 15: b37lo02Z S257 90,7
Error in line 27: b37lo02Z S108 93,0
Error in line 28: b37lo02Z S449 24,8
Error in line 30: b37lo02Z A233 20,9
